--- a/style.css
+++ b/style.css
@@ -235,6 +235,14 @@ button {
     border: 2px solid palevioletred;
 }
 
+.attribution { 
+    margin: 2rem 0;
+    font-size: .8rem; 
+    text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
 
 @media screen and (min-width: 768px) {
     .card {
