--- a/style.css
+++ b/style.css
@@ -235,6 +235,18 @@ button {
     border: 2px solid palevioletred;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 .attribution { 
     margin: 2rem 0;
     font-size: .8rem; 
